--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
                         </h1>
                     </div>
                     <div class="col-md-8 projectImg">
-                        <img class="img-responsive" src="Image/ProtectSunnyPicB.jpg" alt="">
+                        <img class="img-responsive" src="image/ProtectSunnyPicB.jpg" alt="">
                     </div>
                     <div class="col-md-4 projectContent">
                         <h3>Introduction</h3>
@@ -84,7 +84,7 @@
                         </h1>
                     </div>
                     <div class="col-md-8 projectImg">
-                        <img class="img-responsive" src="Image/InfinityAntsPicB.jpg" alt="">
+                        <img class="img-responsive" src="image/InfinityAntsPicB.jpg" alt="">
                     </div>
                     <div class="col-md-4 projectContent">
                         <h3>Introduction</h3>
@@ -105,7 +105,7 @@
                         </h1>
                     </div>
                     <div class="col-md-8 projectImg">
-                        <img class="img-responsive" src="Image/TerminalPicB.jpg" alt="">
+                        <img class="img-responsive" src="image/TerminalPicB.jpg" alt="">
                     </div>
                     <div class="col-md-4 projectContent">
                         <h3>Introduction</h3>
@@ -126,7 +126,7 @@
                         </h1>
                     </div>
                     <div class="col-md-8 projectImg">
-                        <img class="img-responsive" src="Image/PhotoMosaicPicB.jpg" alt="">
+                        <img class="img-responsive" src="image/PhotoMosaicPicB.jpg" alt="">
                     </div>
                     <div class="col-md-4 projectContent">
                         <h3>Introduction</h3>
@@ -146,7 +146,7 @@
                         </h1>
                     </div>
                     <div class="col-md-8 projectImg">
-                        <img class="img-responsive" src="Image/MaskPicB.jpg" alt="">
+                        <img class="img-responsive" src="image/MaskPicB.jpg" alt="">
                     </div>
                     <div class="col-md-4 projectContent">
                         <h3>Introduction</h3>
@@ -166,7 +166,7 @@
                         </h1>
                     </div>
                     <div class="col-md-8 projectImg">
-                        <img class="img-responsive" src="Image/MotionSensorPicB.jpg" alt="">
+                        <img class="img-responsive" src="image/MotionSensorPicB.jpg" alt="">
                     </div>
                     <div class="col-md-4 projectContent">
                         <h3>Introduction</h3>
@@ -192,37 +192,37 @@
 
             <div class="col-sm-3 col-xs-6 relatedElement">
                 <div data="#project1">
-                    <img class="img-responsive portfolio-item" src="Image/ProtectSunnyPicS.jpg" alt="">
+                    <img class="img-responsive portfolio-item" src="image/ProtectSunnyPicS.jpg" alt="">
                 </div>
             </div>
 
             <div class="col-sm-3 col-xs-6 relatedElement">
                 <div data="#project2">
-                    <img class="img-responsive portfolio-item" src="Image/InfinityAntsPicS.jpg" alt="">
+                    <img class="img-responsive portfolio-item" src="image/InfinityAntsPicS.jpg" alt="">
                 </div>
             </div>
 
             <div class="col-sm-3 col-xs-6 relatedElement">
                 <div data="#project3">
-                    <img class="img-responsive portfolio-item" src="Image/TerminalPicS.jpg" alt="">
+                    <img class="img-responsive portfolio-item" src="image/TerminalPicS.jpg" alt="">
                 </div>
             </div>
 
             <div class="col-sm-3 col-xs-6 relatedElement">
                 <div data="#project4">
-                    <img class="img-responsive portfolio-item" src="Image/PhotoMosaicPicS.jpg" alt="">
+                    <img class="img-responsive portfolio-item" src="image/PhotoMosaicPicS.jpg" alt="">
                 </div>
             </div>
 
             <div class="col-sm-3 col-xs-6 relatedElement">
                 <div data="#project5">
-                    <img class="img-responsive portfolio-item" src="Image/MaskPicS.jpg" alt="">
+                    <img class="img-responsive portfolio-item" src="image/MaskPicS.jpg" alt="">
                 </div>
             </div>
 
             <div class="col-sm-3 col-xs-6 relatedElement">
                 <div data="#project6">
-                    <img class="img-responsive portfolio-item" src="Image/MotionSensorPicS.jpg" alt="">
+                    <img class="img-responsive portfolio-item" src="image/MotionSensorPicS.jpg" alt="">
                 </div>
             </div>
         </div>
