--- a/portfolio.html
+++ b/portfolio.html
@@ -56,9 +56,30 @@
         <div class="row">
 
             <div class="main">
-                <div id="project1" class="projectIntro active">
+				<div id="project1" class="projectIntro active">
                     <div class="col-lg-12 projectTitle">
                         <h1 class="page-header">Project 1
+                            <small>CrazyBomby</small>
+                        </h1>
+                    </div>
+                    <div class="col-md-8 projectImg">
+                        <img class="img-responsive" src="image/CrazyBombyPicB.jpg" alt="">
+                    </div>
+                    <div class="col-md-4 projectContent">
+                        <h3>Introduction</h3>
+                        <p>Built a component-based 2D game engine with OpenGL and C++.<br /> It is a bomberman-like game.<br /><br />Course - 2017 Fundamentals of Game Development</p>
+                        <h3><a href="https://drive.google.com/file/d/1IjWzuubCMNWag67i9cPE8I8CJewNpBLn/view?usp=sharing" target="_blank">Download Link</a></h3>
+                        <ul>
+                            <li>Source Code</li>
+                            <li>User Instructions</li>
+                            <li>Documentation</li>
+                            <li>README</li>
+                        </ul>
+                    </div>
+                </div>
+                <div id="project2" class="projectIntro">
+                    <div class="col-lg-12 projectTitle">
+                        <h1 class="page-header">Project 2
                             <small>Protect Sunny</small>
                         </h1>
                     </div>
@@ -77,9 +98,9 @@
                         </ul>
                     </div>
                 </div>
-                <div id="project2" class="projectIntro">
+                <div id="project3" class="projectIntro">
                     <div class="col-lg-12 projectTitle">
-                        <h1 class="page-header">Project 2
+                        <h1 class="page-header">Project 3
                             <small>Infinity Ants</small>
                         </h1>
                     </div>
@@ -98,9 +119,9 @@
                         </ul>
                     </div>
                 </div>
-                <div id="project3" class="projectIntro">
+                <div id="project4" class="projectIntro">
                     <div class="col-lg-12 projectTitle">
-                        <h1 class="page-header">Project 3
+                        <h1 class="page-header">Project 4
                             <small>Terminal</small>
                         </h1>
                     </div>
@@ -119,9 +140,9 @@
                         </ul>
                     </div>
                 </div>
-                <div id="project4" class="projectIntro">
+                <div id="project5" class="projectIntro">
                     <div class="col-lg-12 projectTitle">
-                        <h1 class="page-header">Project 4
+                        <h1 class="page-header">Project 5
                             <small>Photographic Mosaic</small>
                         </h1>
                     </div>
@@ -138,10 +159,10 @@
                         </ul>
                     </div>
                 </div>
-                <div id="project5" class="projectIntro">
+                <div id="project6" class="projectIntro">
                     <div class="col-lg-12 projectTitle">
                         <h1 class="page-header">
-                            Project 5
+                            Project 6
                             <small>Face Detection</small>
                         </h1>
                     </div>
@@ -158,10 +179,10 @@
                         </ul>
                     </div>
                 </div>
-                <div id="project6" class="projectIntro">
+                <div id="project7" class="projectIntro">
                     <div class="col-lg-12 projectTitle">
                         <h1 class="page-header">
-                            Project 6
+                            Project 7
                             <small>MotionSensor</small>
                         </h1>
                     </div>
@@ -190,38 +211,45 @@
                 <h3 class="page-header">Related Projects</h3>
             </div>
 
-            <div class="col-sm-3 col-xs-6 relatedElement">
+			
+			<div class="col-sm-3 col-xs-6 relatedElement">
                 <div data="#project1">
+                    <img class="img-responsive portfolio-item" src="image/CrazyBombyPicS.jpg" alt="">
+                </div>
+            </div>
+			
+            <div class="col-sm-3 col-xs-6 relatedElement">
+                <div data="#project2">
                     <img class="img-responsive portfolio-item" src="image/ProtectSunnyPicS.jpg" alt="">
                 </div>
             </div>
 
             <div class="col-sm-3 col-xs-6 relatedElement">
-                <div data="#project2">
+                <div data="#project3">
                     <img class="img-responsive portfolio-item" src="image/InfinityAntsPicS.jpg" alt="">
                 </div>
             </div>
 
             <div class="col-sm-3 col-xs-6 relatedElement">
-                <div data="#project3">
+                <div data="#project4">
                     <img class="img-responsive portfolio-item" src="image/TerminalPicS.jpg" alt="">
                 </div>
             </div>
 
             <div class="col-sm-3 col-xs-6 relatedElement">
-                <div data="#project4">
+                <div data="#project5">
                     <img class="img-responsive portfolio-item" src="image/PhotoMosaicPicS.jpg" alt="">
                 </div>
             </div>
 
             <div class="col-sm-3 col-xs-6 relatedElement">
-                <div data="#project5">
+                <div data="#project6">
                     <img class="img-responsive portfolio-item" src="image/MaskPicS.jpg" alt="">
                 </div>
             </div>
 
             <div class="col-sm-3 col-xs-6 relatedElement">
-                <div data="#project6">
+                <div data="#project7">
                     <img class="img-responsive portfolio-item" src="image/MotionSensorPicS.jpg" alt="">
                 </div>
             </div>
